container renamed to row for classname of homepage divs for clarity

--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/HomePage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/HomePage.css
@@ -7,11 +7,11 @@
   height: 100vh;
 }
 
-.containers {
+.row {
   display: flex;
   flex-direction: row;
   justify-content: right; /* Adjust as needed */
-  width: 80%;
+  width: 50%;
   padding: 1rem;
 }
 
