--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/HomePage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/HomePage.css
@@ -1,7 +1,5 @@
 .desktop {
   background-color: #082035;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
@@ -9,10 +7,14 @@
 
 .row {
   display: flex;
-  flex-direction: row;
-  justify-content: right; /* Adjust as needed */
-  width: 50%;
-  padding: 1rem;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+.column {
+  flex: 50%;
+  max-width: 17%;
+  padding: 0 4px;
 }
 
 
