Screen size component

--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/Header/Header.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/Header/Header.css
@@ -7,7 +7,7 @@
     left: 295px;
     letter-spacing: 0;
     line-height: normal;
-    position: absolute;
+    margin: 0 auto;
     top: 280px;
     width: 501px;
   }
