--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/WalkPage/WalkingHeader/WalkPageHeader.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/WalkPage/WalkingHeader/WalkPageHeader.css
@@ -1,14 +1,9 @@
 
-.minimalism-fitness {
-    color: #FFFFFF;
-    font-family: "Outfit-Bold", Helvetica;
-    font-size: 38px;
-    font-weight: 700;
-    left: 295px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 280px;
-    width: 501px;
-  }
+.walkPageHeader {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
 
