--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/WalkPage/WalkPage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/WalkPage/WalkPage.css
@@ -45,12 +45,12 @@
 .WalkingContent {
   display: flex;
   width: 100%;
-  justify-content: space-around; /* Adjust as needed */
+  justify-content: space-around;
   align-items: start;
 }
 
 .WalkingDetailList {
-  flex: 3;
+  flex: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
