--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/WalkPage/WalkPage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/WalkPage/WalkPage.css
@@ -10,23 +10,23 @@
 
 .contentContainer {
   display: flex;
+  flex-direction: column; 
+  align-items: center; 
   width: 100%;
-  justify-content: space-between; /* Distribute space between the elements */
-  align-items: flex-start; /* Align items at the start of the container */
 }
 
 .WalkingSummary {
   background-color: #D9D9D9; 
-    border-radius: 45px; 
-    width: 370px; 
-    height: 30%; 
-    text-align: center; 
-    position: absolute; 
-    left: 10%; 
-    top: 50%; 
-    transform: translateY(-50%); 
-    box-sizing: border-box; 
-    padding: 20px;
+  border-radius: 45px; 
+  width: 370px; 
+  height: 30%; 
+  text-align: center; 
+  position: absolute; 
+  left: 10%; 
+  top: 50%; 
+  transform: translateY(-50%); 
+  box-sizing: border-box; 
+  padding: 20px;
 }
 
 .walkingForm {
@@ -53,24 +53,32 @@
 
 .WalkingDetailList {
   display: flex;
-  flex-direction: row; /* Change the direction to row */
-  justify-content: flex-end; /* Push the detail list to the far right */
-  width: 100%; /* Ensure it takes the full width to allow spacing */
+  flex-wrap: wrap;
+  justify-content: flex-end; 
+  gap: 20px; 
+  width: 100%; 
+  padding-right: 20px; 
 }
 
 .WalkingFormContainer {
-  max-width: 600px; /* Adjust based on your preference */
-  margin-top: 20px; /* Adjust based on the navbar height and desired spacing */
-  margin-left: auto;
-  margin-right: auto;
+  flex: 1; 
+  max-width: 300px; 
+  margin-right: 20px;
+  width: 50%;
+  margin-top: 20px; 
 }
 
-.WalkingFormContainer { /* New class for the form container within WalkingDetailList */
-  flex-grow: 1; /* Allow the form container to grow and push the list to the right */
+.WalkingFormContainer { 
+  flex-grow: 1; 
   display: flex;
-  justify-content: center; /* Center the form within its container */
+  justify-content: center; 
 }
 
-.WalkingActivityList { /* Adjust this if it's a class applied to the list within WalkingDetailList */
-  flex-basis: content; /* Let the list size based on its content */
+.WalkingActivityList { 
+  flex-basis: content; 
+}
+
+.WalkingItem {
+  min-width: calc(33.333% - 20px); 
+  
 }
