--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/Header/Header.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/Header/Header.css
@@ -1,14 +1,12 @@
-
 .minimalism-fitness {
-    color: #FFFFFF;
-    font-family: "Outfit-Bold", Helvetica;
-    font-size: 38px;
-    font-weight: 700;
-    left: 295px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 280px;
-    width: 501px;
-  }
-
+  color: #FFFFFF;
+  font-family: "Outfit-Bold", Helvetica;
+  font-size: 38px;
+  font-weight: 700;
+  left: 295px;
+  letter-spacing: 0;
+  line-height: normal;
+  margin: 0 auto;
+  top: 280px;
+  width: 501px;
+}
