--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/HomePage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/HomePage.css
@@ -1,10 +1,11 @@
 .desktop {
   background-color: #082035;
+  min-height: 100vh;
 }
 
 .header {
   text-align: center;
-  padding-bottom: 200px;
+  padding-bottom: 50px;
 }
 
 .row {
