--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/RegistrationPage/LoginPage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/RegistrationPage/LoginPage.css
@@ -1,18 +1,9 @@
-
-.wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column; 
-  height: 100vh;
-  background-color: #1b4062;
-}
-
 form {
   background-color: #ffffff;
-  padding: 20px;
+  padding: 40px;
+  margin-top: 15rem;
   border-radius: 8px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
