Removed hyperlink type effect from the heading

--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/Header/Header.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/Header/Header.css
@@ -1,5 +1,4 @@
 .minimalism-fitness {
-    color: #FFFFFF;
     font-family: "Outfit-Bold", Helvetica;
     font-size: 38px;
     font-weight: 700;
@@ -10,4 +9,9 @@
     top: 280px;
     width: 501px;
   }
+
+#heading {
+  color: #FFFFFF;
+  text-decoration: none;
+}
 
