--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/NutritionPage/MealForm/MealForm.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/NutritionPage/MealForm/MealForm.css
@@ -4,6 +4,7 @@ form {
     padding: 20px;
     background-color: #f0f0f0;
     border-radius: 8px;
+    
   }
   
   select,
@@ -14,16 +15,19 @@ form {
     box-sizing: border-box;
   }
   
-  button {
+  .submitButton {
     background-color: #007bff;
     color: white;
     padding: 10px 15px;
     border: none;
-    border-radius: 4px;
+    border-radius: 25px;
+    width: 200px;
     cursor: pointer;
+    font-weight: bold;
+    margin-left: 25%;
   }
   
-  button:hover {
+  .submitButton:hover {
     background-color: #0056b3;
   }
   
