--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/NutritionPage/MealForm/MealForm.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/NutritionPage/MealForm/MealForm.css
@@ -6,6 +6,14 @@ form {
     border-radius: 8px;
     
   }
+
+  label {
+    display: block;
+    font-size: 17px;
+    font-weight: bold;
+    margin-bottom: 8px;
+    color: #333; 
+  }
   
   select,
   input {
