--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/NutritionSummary/NutritionContainer.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/NutritionSummary/NutritionContainer.css
@@ -1,8 +1,20 @@
-.NutritionContainer {
+/* .NutritionContainer {
     background-color: #D9D9D9;
     border-radius: 45px;
     height: 318px;
     width: 370px;
     text-align: center;
 
-  }
+  } */
+
+
+  .NutritionContainer {
+    background-color: #f0f0f07f;
+    border-radius: 45px;
+    height: 400px;
+    margin-left: 50px; /* Use margin-left instead of left */
+    margin-top: 20px; /* Adjust top margin as needed */
+    margin-bottom: 10px; /* Adjust bottom margin as needed */
+    width: 400px;
+    text-align: center;
+}
