--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/SleepSummary/SleepContainer.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/SleepSummary/SleepContainer.css
@@ -1,9 +1,11 @@
-.SleepContainer {
-    background-color: #D9D9D9;
+
+  .SleepContainer {
+    background-color: #f0f0f07f;
     border-radius: 45px;
-    height: 318px;
-    left: 390px;
-    top: 0;
-    width: 370px;
+    height: 400px;
+    margin-left: 50px; /* Use margin-left instead of left */
+    margin-top: 100px; /* Adjust top margin as needed */
+    margin-bottom: 0px; /* Adjust bottom margin as needed */
+    width: 400px;
     text-align: center;
-  }
+}
