--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/UserSummary/UserContainer.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/UserSummary/UserContainer.css
@@ -1,10 +1,27 @@
 .UserContainer {
-    background-color: #D9D9D9;
-    border-radius: 45px;
-    height: 666px;
-    left: 355px;
-    top: 435px;
-    width: 360px;
-    text-align: center;
-    
-  }
+  background-color: #f0f0f07f;
+  border-radius: 45px;
+  height: 850px; 
+  width: 500px;
+  margin: 20px auto; 
+  padding: 20px; 
+  text-align: center;
+}
+.UserContainer img {
+  margin-top: 50px;
+  margin-bottom: 120px;
+}
+.UserContainer h1 {
+  color: #090909;
+  margin-top: 100px; 
+  font-size: 40px;
+}
+
+.UserContainer h2 {
+  margin-top: 25px;
+}
+
+.UserContainer .height-value,
+.UserContainer .weight-value {
+  font-weight: bold; 
+}
