--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/WalkPage/WalkForm/WalkForm.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/WalkPage/WalkForm/WalkForm.css
@@ -1,6 +1,7 @@
 form {
+    margin-top: 0;
     max-width: 400px;
-    margin: 0 auto;
+    margin: 20px auto 0;
     padding: 20px;
     background-color: #f0f0f0;
     border-radius: 8px;
