--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/RegistrationPage/LoginPage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/RegistrationPage/LoginPage.css
@@ -24,7 +24,7 @@ h1 {
   box-sizing: border-box;
 }
 
-button {
+#login-btn {
   width: 100%;
   padding: 10px;
   background-color: #3498db;
@@ -35,7 +35,7 @@ button {
   font-size: 16px;
 }
 
-button:hover {
+#login-btn:hover {
   background-color: #2e86c1;
 }
 
