--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/RegistrationPage/SignUpPage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/RegistrationPage/SignUpPage.css
@@ -38,7 +38,7 @@
     box-sizing: border-box;
   }
   
-  button {
+  #signup-btn {
     width: 100%;
     padding: 10px;
     background-color: #3498db;
@@ -49,7 +49,7 @@
     font-size: 16px;
   }
   
-  button:hover {
+  #signup-btn:hover {
     background-color: #2e86c1;
   }
   
