placeholder image for homepage when all records are deleted

--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/NutritionSummary/NutritionContainer.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/NutritionSummary/NutritionContainer.css
@@ -8,3 +8,9 @@
     width: 400px;
     text-align: center;
 }
+
+#nutrition-sum-img{
+    width: 200px;
+    height: 200px;
+    margin-top: 0px;
+}
