Background colours and heading colours changed

--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/NavBar/NavBar.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/NavBar/NavBar.css
@@ -8,7 +8,7 @@
 .pushup,
 .nutrition,
 .sleep {
-  color: #FFFFFF;
+  color: #000000;
   font-family: "Outfit-Bold", Helvetica;
   font-size: 24px;
   font-weight: 700;
