Background colours of the forms changed

--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/NutritionPage/MealForm/MealForm.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/NutritionPage/MealForm/MealForm.css
@@ -2,7 +2,7 @@ form {
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: #f0f0f032;
     border-radius: 8px;
     
   }
