--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/RegistrationPage/LoginPage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/RegistrationPage/LoginPage.css
@@ -1,5 +1,5 @@
 #login-form {
-  background-color: #ffffff;
+  background-color: #f0f0f032;
   padding: 40px;
   margin-top: 15rem;
   border-radius: 8px;
