--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/RegistrationPage/SignUpPage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/RegistrationPage/SignUpPage.css
@@ -7,7 +7,7 @@
   }
   
   form {
-    background-color: #ffffff;
+    background-color: #f0f0f07a;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 80px 80px 80px rgba(0, 0, 0, 0.1);
