--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/UserPage/UserPage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/UserPage/UserPage.css
@@ -72,7 +72,7 @@ input[type="date"] {
     flex: 1;
     font-size: 25px; 
     color: #333;
-    background-color: #b5b5b5;
+    background-color: rgb(255, 255, 255);
     border: 1px solid #b5b5b5;
     border-radius: 5px;
     padding: 8px;
