--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/WalkPage/WalkForm/WalkForm.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/WalkPage/WalkForm/WalkForm.css
@@ -3,7 +3,7 @@ form {
     max-width: 400px;
     margin: 20px auto 0;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: #f0f0f032;
     border-radius: 8px;
   }
   
