--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/SleepSummary/SleepContainer.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/HomePage/SleepSummary/SleepContainer.css
@@ -1,11 +1,10 @@
-
   .SleepContainer {
     background-color: #f0f0f07f;
     border-radius: 45px;
     height: 400px;
-    margin-left: 50px; /* Use margin-left instead of left */
-    margin-top: 100px; /* Adjust top margin as needed */
-    margin-bottom: 0px; /* Adjust bottom margin as needed */
+    margin-left: 50px;
+    margin-top: 100px; 
+    margin-bottom: 0px; 
     width: 400px;
     text-align: center;
 }
