trying search api (not working properly)

--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/WalkPage/WalkingHistory/WalkingHistory.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/WalkPage/WalkingHistory/WalkingHistory.css
@@ -25,7 +25,11 @@
     font-size: 1.3rem;
   }
   
-  .redWalkMessage {
+.redWalkMessage {
     color: #ff2a1b;
     font-size: 1.3rem;
   }
+
+.highlight {
+    background-color: yellow; 
+}
