--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/NutritionPage/NutritionHistory/NutritionHistory.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/NutritionPage/NutritionHistory/NutritionHistory.css
@@ -33,3 +33,55 @@
     background-color: #800606;
   }
 
+  .cancel-btn {
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    padding: 10px 15px;
+    border-radius: 25px;
+    width: 200px;
+    cursor: pointer;
+    font-weight: bold;
+    display: block;
+    margin-left: 25%;
+    margin-top: 2%;
+    margin-bottom: 3%;
+  }
+
+  .cancel-btn:hover {
+    background-color: #e6e6e6;
+  }
+
+  .update-btn {
+    background-color: #27b93f;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 25px;
+    width: 200px;
+    cursor: pointer;
+    font-weight: bold;
+    display: block;
+    margin-left: 25%;
+  
+  }
+
+  .update-btn:hover {
+    background-color: #1a7e2a;
+  }
+
+  body .edit-input{
+    margin: 0px;
+    font-size: 15px;
+    
+  }
+
+  body .edit-form{
+    background-color: transparent;
+  }
+
+  .nutritionhistory{
+    height: auto;
+    padding-bottom: 5%;
+  }
+
+
