adding features to sleep page

--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/NutritionPage/MealForm/MealForm.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/NutritionPage/MealForm/MealForm.css
@@ -46,7 +46,8 @@ form {
   }
 
   .greenMealMessage {
-    color: #2ceb05;
+    font-weight: bold;
+    color: #299913;
     font-size: 1.3rem;
   }
   
