--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/UserPage/UserPage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/UserPage/UserPage.css
@@ -20,6 +20,9 @@
     position: relative; 
 }
 
+
+
+
 .left-box {
     border: none;
     display: flex;
@@ -87,7 +90,7 @@ select {
 input[type="file"] {
     padding: 10px;
     margin-top: 10px;
-    background-color: #b5b5b5;
+    background-color: #fffefe;
     border-radius: 5px;
     border: 1px solid #b5b5b5;
     color: #333;
@@ -102,7 +105,6 @@ input[type="file"] {
 }
 
 .saveUserChanges {
-    margin: 10px;
     padding: 10px 15px 10px;
     font-size: 25px; 
     background-color: #E83C00;
@@ -111,6 +113,8 @@ input[type="file"] {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin: 10px auto;
+    
 }
 
 .left-content {
@@ -122,3 +126,4 @@ input[type="file"] {
     background-color: #FE6A16;
     
 }
+
