pushup counter and tracker moved to the middle of the page

--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/PushUpPage/PushUpPage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/PushUpPage/PushUpPage.css
@@ -8,6 +8,13 @@
     justify-content: space-around;
     align-items: flex-start;
   }
+  .pushup-counter{
+    padding-top: 15%;
+  }
+
+  .target-tracker{
+    padding-top: 15%;
+  }
 
   .left-box,
   .middle-box,
