--- a/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/SleepPage/SleepPage.css
+++ b/src/main/java/com/health/minimalismfitnessapp/frontend/fitness-app/src/components/SleepPage/SleepPage.css
@@ -34,7 +34,7 @@
 
   max-height: 500px;
   overflow-y: auto;
-  padding-top: 1000px;
+  padding-top: 200px;
 
 
 
@@ -52,7 +52,7 @@
 
 .leftboxsleep::-webkit-scrollbar-thumb {
   background: #888; 
-  border-radius: 5px; 
+  border-radius: 15px; 
 }
 
 
@@ -63,6 +63,14 @@
 
 .leftboxsleep {
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1); 
+}
+
+
+
+.sleep-page-container::-webkit-scrollbar-thumb {
+  background-color: #888; 
+  border-radius: 15px; 
+  height: 40px; 
 }
 
 
@@ -180,5 +188,5 @@ form {
 }
 
 .sleep-record:hover {
-  background-color: rgba(199, 196, 191, 0.533); /* Change the background color on hover */
+  background-color: rgba(199, 196, 191, 0.533);
 }
